// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class_with_generics.js 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import React from 'react';

/*:: type Props = {
  foo?: ?string,
  bar: number,
}; */

/*:: type State = { baz: number }; */

class Component extends React.Component/*:: <Props, State> */ {
}

=====================================output=====================================
import React from "react";

/*:: type Props = {
  foo?: ?string,
  bar: number,
}; */

/*:: type State = { baz: number }; */

class Component extends React.Component /*:: <Props, State> */ {
}

================================================================================
`;

exports[`functions.js 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

export function updateStoreFromURL(
  store /*: Store*/,
  {search, hash} /*: {search: string, hash: string}*/
) {}

=====================================output=====================================
export function updateStoreFromURL(
  store /*: Store*/,
  { search, hash } /*: {search: string, hash: string}*/
) {}

================================================================================
`;
